ALl files updated

--- a/DL.ipynb
+++ b/DL.ipynb
@@ -121,7 +121,128 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.preprocessing import StandardScaler, LabelEncoder\n",
+    "from tensorflow.keras.models import Model\n",
+    "from tensorflow.keras.layers import (Input, Dense, Dropout, Conv1D, LSTM, GRU, \n",
+    "                                      Flatten, BatchNormalization, concatenate)\n",
+    "                                      from tensorflow.keras.utils import to_categorical\n",
+    "                                      from tensorflow.keras.callbacks import EarlyStopping, ReduceLROnPlateau\n",
+    "\n",
+    "                                      # Load the dataset\n",
+    "                                      file_path = '/mnt/data/validated.csv'\n",
+    "                                      data = pd.read_csv(file_path)\n",
+    "\n",
+    "                                      # Basic data preprocessing\n",
+    "                                      # Assuming the target column is the last one (adjust if necessary)\n",
+    "                                      X = data.iloc[:, :-1]  # Features\n",
+    "                                      y = data.iloc[:, -1]   # Target\n",
+    "\n",
+    "                                      # Handle categorical target if necessary\n",
+    "                                      if y.dtype == 'object':\n",
+    "                                          label_encoder = LabelEncoder()\n",
+    "                                              y = label_encoder.fit_transform(y)\n",
+    "                                              y = to_categorical(y)  # Convert to one-hot encoding for multi-class classification\n",
+    "\n",
+    "                                              # Split the data into training and testing sets\n",
+    "                                              X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "                                              # Normalize the features\n",
+    "                                              scaler = StandardScaler()\n",
+    "                                              X_train = scaler.fit_transform(X_train)\n",
+    "                                              X_test = scaler.transform(X_test)\n",
+    "\n",
+    "                                              # Reshape for CNN and RNN inputs (1D convolution and RNNs require 3D input: samples, timesteps, features)\n",
+    "                                              X_train_cnn_rnn = np.expand_dims(X_train, axis=2)\n",
+    "                                              X_test_cnn_rnn = np.expand_dims(X_test, axis=2)\n",
+    "\n",
+    "                                              # Build a complex combined FNN, CNN, and RNN architecture\n",
+    "                                              input_layer_fnn = Input(shape=(X_train.shape[1],))\n",
+    "\n",
+    "                                              # FNN branch\n",
+    "                                              fnn = Dense(256, activation='relu')(input_layer_fnn)\n",
+    "                                              fnn = BatchNormalization()(fnn)\n",
+    "                                              fnn = Dropout(0.4)(fnn)\n",
+    "                                              fnn = Dense(128, activation='relu')(fnn)\n",
+    "                                              fnn = BatchNormalization()(fnn)\n",
+    "                                              fnn = Dropout(0.3)(fnn)\n",
+    "\n",
+    "                                              # CNN branch\n",
+    "                                              input_layer_cnn = Input(shape=(X_train_cnn_rnn.shape[1], X_train_cnn_rnn.shape[2]))\n",
+    "                                              cnn = Conv1D(128, kernel_size=5, activation='relu')(input_layer_cnn)\n",
+    "                                              cnn = BatchNormalization()(cnn)\n",
+    "                                              cnn = Conv1D(64, kernel_size=3, activation='relu')(cnn)\n",
+    "                                              cnn = Flatten()(cnn)\n",
+    "\n",
+    "                                              # RNN branch (using LSTM and GRU)\n",
+    "                                              rnn = LSTM(128, return_sequences=True)(input_layer_cnn)\n",
+    "                                              rnn = BatchNormalization()(rnn)\n",
+    "                                              rnn = GRU(64, return_sequences=False)(rnn)\n",
+    "                                              rnn = BatchNormalization()(rnn)\n",
+    "\n",
+    "                                              # Combine branches\n",
+    "                                              combined = concatenate([fnn, cnn, rnn])\n",
+    "                                              combined = Dense(128, activation='relu')(combined)\n",
+    "                                              combined = BatchNormalization()(combined)\n",
+    "                                              combined = Dropout(0.3)(combined)\n",
+    "                                              output_layer = Dense(y.shape[1], activation='softmax')(combined)  # Use 'softmax' for multi-class classification\n",
+    "\n",
+    "                                              # Define the model\n",
+    "                                              model = Model(inputs=[input_layer_fnn, input_layer_cnn], outputs=output_layer)\n",
+    "\n",
+    "                                              # Compile the model\n",
+    "                                              model.compile(optimizer='adam', loss='categorical_crossentropy', metrics=['accuracy'])\n",
+    "\n",
+    "                                              # Add early stopping and learning rate reduction\n",
+    "                                              early_stopping = EarlyStopping(monitor='val_loss', patience=15, restore_best_weights=True)\n",
+    "                                              lr_reduction = ReduceLROnPlateau(monitor='val_loss', factor=0.5, patience=5, min_lr=1e-6)\n",
+    "\n",
+    "                                              # Train the model\n",
+    "                                              history = model.fit(\n",
+    "                                                  [X_train, X_train_cnn_rnn], y_train,\n",
+    "                                                      validation_split=0.2,\n",
+    "                                                          epochs=200,\n",
+    "                                                              batch_size=64,\n",
+    "                                                                  callbacks=[early_stopping, lr_reduction],\n",
+    "                                                                      verbose=1\n",
+    "                                                                      )\n",
+    "\n",
+    "                                                                      # Evaluate the model\n",
+    "                                                                      eval_results = model.evaluate([X_test, X_test_cnn_rnn], y_test, verbose=0)\n",
+    "                                                                      print(f\"Test Accuracy: {eval_results[1] * 100:.2f}%\")\n",
+    "\n",
+    "                                                                      # Save the model\n",
+    "                                                                      model.save('complex_combined_model_multiclass.h5')\n",
+    "\n",
+    "                                                                      # Plot accuracy and loss curves (optional)\n",
+    "                                                                      import matplotlib.pyplot as plt\n",
+    "\n",
+    "                                                                      plt.figure(figsize=(12, 4))\n",
+    "\n",
+    "                                                                      # Plot accuracy\n",
+    "                                                                      plt.subplot(1, 2, 1)\n",
+    "                                                                      plt.plot(history.history['accuracy'], label='Train Accuracy')\n",
+    "                                                                      plt.plot(history.history['val_accuracy'], label='Validation Accuracy')\n",
+    "                                                                      plt.title('Model Accuracy')\n",
+    "                                                                      plt.xlabel('Epochs')\n",
+    "                                                                      plt.ylabel('Accuracy')\n",
+    "                                                                      plt.legend()\n",
+    "\n",
+    "                                                                      # Plot loss\n",
+    "                                                                      plt.subplot(1, 2, 2)\n",
+    "                                                                      plt.plot(history.history['loss'], label='Train Loss')\n",
+    "                                                                      plt.plot(history.history['val_loss'], label='Validation Loss')\n",
+    "                                                                      plt.title('Model Loss')\n",
+    "                                                                      plt.xlabel('Epochs')\n",
+    "                                                                      plt.ylabel('Loss')\n",
+    "                                                                      plt.legend()\n",
+    "\n",
+    "                                                                      plt.show()\n",
+    "                                                                      "
+   ]
   }
  ],
  "metadata": {
