--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -23,12 +23,12 @@
       "3  146128.000000  145337.0   146128.000000     146093.526271    146059.232314   \n",
       "4  136690.333333  136649.0   136690.333333     136688.966200    136687.599478   \n",
       "\n",
-      "    Deg_mean  Deg_median  Deg_weighted_avg    label  \n",
-      "0 -79.856000     -79.947        -79.856000  BC_10-3  \n",
-      "1 -15.572333     -15.574        -15.572333  BC_10-3  \n",
-      "2 -15.333000     -15.338        -15.333000  BC_10-3  \n",
-      "3 -14.914667     -14.957        -14.914667  BC_10-3  \n",
-      "4 -15.732000     -15.735        -15.732000  BC_10-3  \n",
+      "    Deg_mean  Deg_median  Deg_weighted_avg label  \n",
+      "0 -79.856000     -79.947        -79.856000    BC  \n",
+      "1 -15.572333     -15.574        -15.572333    BC  \n",
+      "2 -15.333000     -15.338        -15.333000    BC  \n",
+      "3 -14.914667     -14.957        -14.914667    BC  \n",
+      "4 -15.732000     -15.735        -15.732000    BC  \n",
       "       Frequency         Z     Deg       Z.1   Deg.1       Z.2   Deg.2  \\\n",
       "0      10.000000   56499.0 -79.136   77663.0 -80.485   78808.0 -79.947   \n",
       "1  253122.636153  137077.0 -15.505  136277.0 -15.574  135589.0 -15.638   \n",
@@ -43,12 +43,12 @@
       "3  146128.000000  145337.0   146197.290818     146093.526271    146059.232314   \n",
       "4  136690.333333  136649.0   136693.068398     136688.966200    136687.599478   \n",
       "\n",
-      "    Deg_mean  Deg_median  Deg_weighted_avg    label  \n",
-      "0 -79.856000     -79.947        -79.859850  BC_10-3  \n",
-      "1 -15.572333     -15.574        -15.572523  BC_10-3  \n",
-      "2 -15.333000     -15.338        -15.333326  BC_10-3  \n",
-      "3 -14.914667     -14.957        -14.916940  BC_10-3  \n",
-      "4 -15.732000     -15.735        -15.732193  BC_10-3  \n",
+      "    Deg_mean  Deg_median  Deg_weighted_avg label  \n",
+      "0 -79.856000     -79.947        -79.859850    BC  \n",
+      "1 -15.572333     -15.574        -15.572523    BC  \n",
+      "2 -15.333000     -15.338        -15.333326    BC  \n",
+      "3 -14.914667     -14.957        -14.916940    BC  \n",
+      "4 -15.732000     -15.735        -15.732193    BC  \n",
       "Corrected data saved successfully.\n"
      ]
     }
@@ -58,7 +58,7 @@
     "import numpy as np\n",
     "\n",
     "# Load the CSV file\n",
-    "file_path = 'shuffled_data+BC.csv'\n",
+    "file_path = 'ONLY_LABEL.csv'\n",
     "data = pd.read_csv(file_path)\n",
     "\n",
     "# Display the first few rows of the dataframe\n",
@@ -109,7 +109,7 @@
     "print(data_corrected.head())\n",
     "\n",
     "# Save the corrected data to a new CSV file\n",
-    "data_corrected.to_csv('validated.csv', index=False)\n",
+    "data_corrected.to_csv('Final.csv', index=False)\n",
     "print(\"Corrected data saved successfully.\")"
    ]
   }
